--- a/src/mta-g-clock-arduino/Makefile
+++ b/src/mta-g-clock-arduino/Makefile
@@ -1,4 +1,5 @@
 
+
 # finds the esp module if arduino isn't
 esp:
 	esptool.py read_flash_status
@@ -6,8 +7,5 @@ esp:
 # after generating, remove src/mta from the front of files in *.pb.c
 # this command is in place of:
 # protoc --proto_path=src/proto --nanopb_out=src/mta src/proto/*.proto
-gen-proto:
-	python generator/nanopb_generator.py src/mta/gtfs-realtime.proto
-
-example:
-	python ./examples/mta_python/main.py
+# gen-proto:
+# 	python generator/nanopb_generator.py src/mta/gtfs-realtime.proto
