working lambda gateway

--- a/src/mta-g-clock-lambda/Makefile
+++ b/src/mta-g-clock-lambda/Makefile
@@ -13,4 +13,4 @@ upload:
 	aws lambda update-function-code --function-name mta-g-clock-lambda --zip-file fileb://function.zip
 
 test-live:
-	aws lambda invoke --function-name mta-api-g-clock --invocation-type Event --payload '{}' response.json
+	aws lambda invoke --function-name mta-g-clock-lambda --invocation-type Event --payload '{}' response.json
